--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ body.dark-mode .about_me__github__icon,
   margin: auto;
 }
 .background-image {
-  background-image: url("./assets/images/Fallen_angel_art-work_xymkkg_c_scale\,w_715.jpg");
+  background-image: url("./assets/images/fallen-angel_art-work.jpg");
   position: absolute;
   width: 100%;
   height: 900px;
@@ -381,7 +381,7 @@ body.dark-mode .about_me__github__icon,
   transform: translateY(-25%);
   background-size: cover;
   background-position: center;
-  opacity: 0.15;
+  opacity: 0.20;
   pointer-events: none;
 }
 
