--- a/style.css
+++ b/style.css
@@ -762,7 +762,9 @@ body.dark-mode #themeToggle {
 body.dark-mode header,
 body.dark-mode .nav__list,
 body.dark-mode .nav__link {
-  background-color: #1e1e1e;
+  /* background-color: #1e1e1e; */
+  background-color: #444;
+  
 }
 
 body.dark-mode .nav__link {
@@ -861,7 +863,6 @@ body.dark-mode #backToTopBtn {
 /*  */
 @media (min-width: 1024px) {
   body.dark-mode .nav__link {
-    background-color: #1e1e1e;
-    color: #f1f1f1;
+    background-color: #444;
   }
 }
