--- a/style.css
+++ b/style.css
@@ -812,7 +812,7 @@ body.dark-mode .skills__title {
 
 /* Projects Section */
 body.dark-mode .project__card {
-  background-color: #1f1f1f;
+  background-color: #242424;
   border-color: #333;
 }
 
