Update testimonials section hover styles in style.css

--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ body.dark-mode .about_me__github__icon,
 
 /*  */
 .testimonials--content {
-  transform: rotateZ(0deg);
+  /* transform: rotateZ(0deg); */
   box-shadow: 2px 5px 5px 2px;
   padding: 2rem 0;
 }
@@ -718,10 +718,8 @@ body.dark-mode .about_me__github__icon,
     width: 85%;
   }
   .testimonials--content:hover {
-    /* object-fit: cover; */
-    /* display: block; */
-    transform: rotate(11deg);
-    transition: transform 0.2s ease-out;
+    /* transform: rotate(11deg); */
+    /* transition: transform 0.2s ease-out; */
     box-shadow: none;
   }
   .resume--content:hover {
