--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header {
   font-size: 1.125rem;
 }
 .nav__list {
-  /* border: 2px solid #005fa3; */
+  border: 2px solid #005fa3;
   padding: 0;
   margin: 0;
   list-style: none;
