Comment out hero__title of hero section for set the name horizontally in style.css

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ header {
   right: 2%;
 }
 .hero__title span {
-  display: block;
+  /* display: block; */
 }
 .about_me--heading {
   font-size: 2.5rem;
