--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ header {
   overflow: hidden;
 }
 
-.project__screenshoot {
+.project__screenshot {
   border: 2px solid #005fa3;
   width: 100%;
   height: 100%;
