--- a/style.css
+++ b/style.css
@@ -299,23 +299,23 @@ header {
   z-index: 1;
 }
 
-.testimonials--content,
+/* .testimonials--content,
 .resume--content {
   position: relative;
   z-index: 2;
   padding: 0 2rem;
-}
+} */
 .testimonials__text--wrapper,
 .resume__text--wrapper {
   width: 80%;
-  margin: auto;
+  margin: 0 auto;
 }
 .background-image {
   background-image: url("./assets/images/fallen-angel_art-work.jpg");
   position: absolute;
   width: 100%;
-  height: 900px;
-  top: 15%;
+  height:52rem;
+  top: 45%;
   left: 0%;
   z-index: 0;
   transform: translateY(-25%);
