--- a/style.css
+++ b/style.css
@@ -165,6 +165,11 @@ header {
 }
 
 /* Skills section */
+.skills__card--wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+}
 .skills,
 .projects,
 .testimonials,
@@ -573,11 +578,11 @@ header {
   .hero__title {
     display: none;
   }
-  .skills__card--wrapper {
+  /* .skills__card--wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
-  }
+  } */
   .skills__card + .skills__card {
     margin-top: 0;
   }
