Update margin to about_me--heading in style.css

--- a/style.css
+++ b/style.css
@@ -148,7 +148,8 @@ header {
   font-family: "Playfair Display", serif;
   font-weight: 700;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 5rem;
+  border: 2px solid red;
 }
 .about_me__text {
   margin: 1rem 0;
