--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ header {
   font-weight: 700;
   text-align: center;
   margin-top: 5rem;
-  border: 2px solid red;
 }
 .about_me__text {
   margin: 1rem 0;
@@ -476,7 +475,9 @@ header {
     padding: 1rem;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   }
-
+  .about_me--heading {
+    margin-top: 0;
+  }
   .hero__title {
     display: none;
   }
