--- a/style.css
+++ b/style.css
@@ -571,7 +571,9 @@ header {
     position: relative;
     margin-top: 2rem;
   }
-
+  .about_me--heading {
+    margin-top: 1rem;
+  }
   .about_me__icons {
     justify-content: right;
     margin-top: 2rem;
