--- a/style.css
+++ b/style.css
@@ -237,6 +237,12 @@ header {
 }
 
 /* Projects section */
+.project__card--wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 4rem;
+}
+
 .project__name {
   font-family: "Playfair Display", serif;
 }
@@ -591,11 +597,11 @@ header {
     margin-top: 0;
   }
   /* Projects section */
-  .project__card--wrapper {
+  /* .project__card--wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 4rem;
-  }
+  } */
   .project__card + .project__card {
     margin-top: 0;
   }
