--- a/style.css
+++ b/style.css
@@ -620,7 +620,7 @@ header {
     transform: scale(1.2) rotateZ(0deg);
     transition: transform 0.2s ease-out;
     /* box-shadow: none; */
-    box-shadow: 2px 5px 5px 2px;
+    /* box-shadow: 2px 5px 5px 2px; */
   }
 }
 @media (min-width: 1200px) {
