--- a/style.css
+++ b/style.css
@@ -492,20 +492,20 @@ header {
   }
   /* Skills section */
 
-  .skills__card--wrapper {
+  /* .skills__card--wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
-  }
+  } */
   .skills__card + .skills__card {
     margin-top: 0;
   }
   /* Projects section */
-  .project__card--wrapper {
+  /* .project__card--wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 4rem;
-  }
+  } */
   .project__card + .project__card {
     margin-top: 0;
   }
