Delete project__name_and_icons updated width to PC version for better UX in style.css

--- a/style.css
+++ b/style.css
@@ -589,9 +589,9 @@ header {
   .project__card + .project__card {
     margin-top: 0;
   }
-  .project__name_and_icons {
+  /* .project__name_and_icons {
     width: 85%;
-  }
+  } */
   .testimonials--content:hover {
     box-shadow: none;
   }
