--- a/style.css
+++ b/style.css
@@ -236,7 +236,6 @@ header {
   width: 2rem;
 }
 
-
 /* Projects section */
 .project__card--wrapper {
   display: grid;
@@ -631,14 +630,10 @@ body.dark-mode .nav__link:hover {
   color: #ffd369;
 }
 
-/* Hero Section */
-body.dark-mode .hero {
-  background-color: #1a1a1a;
-}
-
 /* About Me Section */
 body.dark-mode .about_me--content {
-  background-color: transparent;
+  background-color: #242424;
+  border-color: #333;
   color: #f1f1f1;
 }
 
@@ -672,28 +667,10 @@ body.dark-mode .project__description {
   color: #ccc;
 }
 
-/* Testimonials Section */
-body.dark-mode .testimonials {
-  background-color: #1b1b1b;
-  color: #eee;
-}
-
-/* Resume Section */
-body.dark-mode .resume {
-  background-color: #181818;
-  color: #eee;
-}
-
 body.dark-mode .resume__btn {
   background-color: #279df1;
   color: #fff;
   border: 1px solid #555;
-}
-
-/* Contact Section */
-body.dark-mode .contact {
-  background-color: #151515;
-  color: #f1f1f1;
 }
 
 /* Back to Top Button */
@@ -702,6 +679,7 @@ body.dark-mode #backToTopBtn {
   color: #333;
 }
 /*  */
+
 @media (min-width: 1024px) {
   body.dark-mode .nav__link {
     background-color: #444;
