--- a/style.css
+++ b/style.css
@@ -546,12 +546,17 @@ header {
   }
   .nav__list {
     position: static;
+    /* border: 2px solid red; */
+    max-height: none;
+    opacity: 1;
     display: flex;
     flex-direction: row;
     max-width: none;
-    width: auto;
+    /* width: auto; */
     gap: 2rem;
     border: none;
+    /* Remove mobile transition for instant display */
+    /* transition: none; */
   }
   .nav__link {
     padding: 0;
